Fix bottom bar on iPhone

--- a/frontend/src/components/organisms/BottomBar/style.module.scss
+++ b/frontend/src/components/organisms/BottomBar/style.module.scss
@@ -14,6 +14,7 @@
   .bottomBarButtons{
     height: 100%;
     width: 100%;
+    margin-bottom: env(safe-area-inset-bottom);
   }
 }
 
